Add java options to mvn surefire plugin