@@ -8,14 +8,12 @@
 	<version>1.0</version>
 	<name>RestAPIDocker.Vertx</name>
 	<description>REST API Docker with Vert.x</description>
-
 	<properties>
 		<java.version>14</java.version>
 		<vertx.version>3.9.1</vertx.version>
  		<maven.compiler.source>14</maven.compiler.source>
     	<maven.compiler.target>14</maven.compiler.target>		
 	</properties>
-
 	<dependencies>
 		<dependency>
 		    <groupId>commons-logging</groupId>
@@ -64,12 +62,18 @@
 			<version>2.3.0.RELEASE</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
+		<!-- <dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.20</version>
 		    <scope>runtime</scope>
-		</dependency>
+		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/io.vertx/vertx-jdbc-client -->
+		<dependency>
+		    <groupId>io.vertx</groupId>
+		    <artifactId>vertx-jdbc-client</artifactId>
+		    <version>3.9.1</version>
+		</dependency>		
 		<dependency>
 		    <groupId>org.skyscreamer</groupId>
 		    <artifactId>jsonassert</artifactId>
@@ -129,6 +133,9 @@
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-surefire-plugin</artifactId>
 	            <version>3.0.0-M4</version>
+	            <configuration>
+	            	<argLine>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true</argLine>
+	            </configuration>
 	        </plugin>
 	        <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
